--- a/mem.html
+++ b/mem.html
@@ -6,7 +6,127 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>지호의 kos 회원가입 창</title>
+	<title>kos 회원가입 창</title>
+
+<!-- 디바이스에 최적화된 크기로 출력됨 --------------------------------------->
+<meta name="viweport" content="width=device-width, iitail-scale=1">
+
+<!-- jQuery CDN 불러오기  -------------------------------------------->
+<script  src="http://code.jquery.com/jquery-latest.min.js"></script>
+
+<!-- 다음 주소록 OPEN API CDN 불러오기  ----------------------------------->
+<script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
+
+<script type="text/javascript">
+	alert("자바스크립트 블럭 시작 >>> : ");
+	
+	$(document).ready(function(){
+		alert("jQuery ready함수 블럭 시작  >>> : ");
+		
+		/*====== 아이디 중복 체크 START ==========================================*/
+		// 아이디 중복체크		
+		$("#midCheck").click(function(){		
+			alert("midCheck >>> : Ajax 배워서 할 예정임 ㅋ ");		
+			console.log("idCheck >>> : ");
+			
+			let midVal = $("#mid").val();
+			if (midVal == '') {
+				alert("중복 체크할 아이디를 입력하세요 >>> : ");
+				$("#mid").focus();
+				return false;
+			}
+		}); // end of $("#midCheck")
+		/*====== 아이디 중복 체크 END ==========================================*/
+		
+		
+		/*====== 비밀번호 체크 START ==========================================*/
+		// 비밀번호 체크 
+		$("#mpwCheck").click(function(){
+			console.log("mpwCheck 함수 진입");
+			var pw = $("#mpw").val();
+			var pw_r = $("#mpw_r").val();
+			alert(pw + " : " + pw_r);
+			if(pw == pw_r) {
+				alert("비밀번호가 같습니다.");
+				$("#mpw_r").val('');			
+				$("#mhp").focus();						
+				return true;
+			} else {
+				alert("비밀번호가 다릅니다.");
+				$("#mpw").val('')
+				$("#mpw_r").val('');
+				$("#mpw").focus();			
+				return false;
+			} // enf of if(pw == pw_r)
+		}); // end of $("#mpwCheck")
+		/*====== 비밀번호 체크 END ==========================================*/
+		
+		// 핸드폰
+		
+		/*====== 이메일 START ==========================================*/	
+		// 이메일 		
+		$('#memail2').change(function(){	
+			$("#memail2 option:selected").each(function () {
+				if($(this).val()== '1'){ //직접입력일 경우 
+						var aa = $("#memail1").val();
+						//alert("aa >>> : " + aa);
+						$("#memail1").val(''); //값 초기화 
+						$("#memail1").attr("readonly",false); //활성화 				
+				}else{ //직접입력이 아닐경우 
+						$("#memail1").val($(this).text()); //선택값 입력 
+						$("#memail1").attr("readonly",true); //비활성화 
+				}
+			}); 
+		}); // end of $("#memail2")
+		/*====== 이메일 END ==========================================*/
+		
+		/*====== 우편번호 START ==========================================*/
+		// 우편번호	
+		$("#mzone_btn").click(function(){
+			console.log("mzone_btn >>> : ");
+			new daum.Postcode({
+				oncomplete: function(data) {
+				    $("#mzone").val(data.zonecode); // 5자리 새우편번호 사용
+				    $("#mroad").val(data.roadAddress); // 도로명 주소
+				    $("#mjibun").val(data.jibunAddress); // 지번주소			
+				}
+			}).open();
+		});// end of $("#mzone_btn")
+		/*====== 우편번호 END ==========================================*/
+		
+		/*====== memForm 태그 START ==========================================*/
+		// memForm 태그에 바인딩 된 데이터 jsp 로 보내기 
+		$("#memInsertBtn").click(function(){
+			alert("mzone_btn >>> : ");
+			console.log("mzone_btn >>> : ");
+			
+			alert("mname >>> : " + $('#mname').val());
+			console.log("mname >>> : " + $('#mname').val());
+			alert("mid >>> : " + $('#mid').val());
+			console.log("mid >>> : " + $('#mid').val());
+			
+			$("#memForm")
+			.attr({
+					"action":"/kosMember/mem",
+				    "method":"GET",
+				    "enctype":"application/x-www-form-urlencoded"
+			       })
+			.submit();	
+			
+		}); // end of $("#memInsertBtn")
+		/*====== memForm 태그 END ==========================================*/		
+	});
+	
+</script>
+
+<style type="text/css">
+	/*====== div START ==========================================*/
+	div {
+			margin: 50px 0px 0px 100px;
+		}	
+	/*====== div END ==========================================*/		
+</style>
+
 </head>
 <body>
 	<div>
@@ -21,7 +141,7 @@
 				<!--  -->
 				<tr>
 					<td>이름</td>
-					<td><input type="text" name="mname" id="mnum" /></td>
+					<td><input type="text" name="mname" id="mname" /></td>
 				</tr>
 				<!--  -->
 				<tr>
@@ -35,7 +155,7 @@
 				<tr>
 					<td>패스워드</td>
 					<td>
-						<input type="text" name="mpw" style="width:100px" /><br>
+						<input type="text" name="mpw" id="mpw" style="width:100px" /><br>
 						<input type="text" name="mpw_r" id="mpw_r" placeholder="비밀번호 확인" style="width:100px"/>
 						<input type="button" name="mpwCheck" id="mpwCheck" value="비밀번호 확인" /> 
 					</td>
@@ -55,15 +175,15 @@
 				<!--  -->
 				<tr>
 					<td>이메일</td>
-					<td>
+					<td>		
 						<input type="text" name="memail"  id="memail" style="width:100px"/>
-						@ <input type="text" name="memail1" id="memail1" style="width:100px" placeholder="직접입력" />	
-						<select name="memail2" id="memil2">
-							<option value="1" selected>직접입력</option>
-							<option value="naver.com" >naver.com</option>
-							<option value="gmail.com" >gmail.com</option>
-							<option value="daum.net" >daum.net</option>
-						</select>
+						@ <input type="text" name="memail1" id="memail1" style="width:100px" placeholder="직접입력" />
+						<select name="memail2" id="memail2">
+				        	 <option value="1" selected>직접입력</option>
+				       		 <option value="naver.com">naver.com</option>	       	   
+				      		 <option value="gmail.com">gmail.com</option>
+				      		 <option value="daum.net">daum.net</option>	       	   
+				         </select>
 					</td>
 				</tr>
 				<!--  -->
@@ -117,6 +237,7 @@
 	</div>
 </body>
 </html>
+
 
 
 
